Changelog 0.3.9 [20230202]:
- Added New Setting "Preffed Source" for Preferences
- Added New Setting "Set Delay in Seconds Before Showing Dialog" for Skip Intro Dialog
- Removed "Seperate Subs and Dubs" 
- Removed "Set content types"
- Removed "Hide Dub/Sub"
- Removed "Season Correction" 

Changelog 0.3.8 [20230130]:
- Added animix search fallback
- Handle error when anilist title is null

Changelog 0.3.7 [20230128]:
- Record season number for the episodes

Changelog 0.3.6 [20230126]:
- Added Set Country Of Origin

Changelog 0.3.5 [20230126]:
- Fixed Hide Sub Sources Setting

Changelog 0.3.4 [20230126]:
- Added Hide Sub Sources Option
- Add Zoro dub sources

Changelog 0.3.3 [20230125]:
- Populate episodes table in databse with air_dates 

Changelog 0.3.2 [20230124]:
- Fixed Episode Airedates in Next Up

Changelog 0.3.1 [20230123]:
- Remove all incorrect use of tabs
- Fix missing icons
- Fixed Search and Genres

Changelog 0.3.0 [20230123]:
- Made Episode Meta Very Consistant
- Made Artwork Very Consistant
- Added New Embeds
- Added Consumet Api
- Added Extra Menu Settings
- Added Last Year Menu Items
- Added Last Season Menu Items
- Added Categorie Menu Items
- Big Thanks to the Consumet Team and to everyone for helping us make this release possible. 

Changelog 0.2.39 [20230121]:
- Added missing headers on login and watchlist requests

Changelog 0.2.38 [20230108]:
- Animix bugfix

Changelog 0.2.37 [20230104]:
- Use alternate Animix site

Changelog 0.2.36 [20221121]:
- New Context menu: trakt correction

Changelog 0.2.35 [20221108]:
- Improve alldebrid cache check

Changelog 0.2.34 [20221107]:
- Fixes error on mal watchlist playback

Changelog 0.2.33 [20221105]:
- Context menu entry to add to watchlist and remove from watchlist

Changelog 0.2.32 [20221102]:
- Fixed an icon typo

Changelog 0.2.31 [20221102]:
- Added Shortcut Settings Category
- Added Completed This Year
- Added Completed This Season
- Added Two New Icons 
- Fixed typo for the Voted Menu Items
