@@ -31,6 +31,7 @@ Changelog 0.3.9 [20230202]:
 - Removed "Set content types"
 - Removed "Hide Dub/Sub"
 - Removed "Season Correction" 
+- Removed "Find Similar" 
     </news>
   </extension>
 </addon>
