@@ -5,6 +5,7 @@ Changelog 0.3.9 [20230202]:
 - Removed "Set content types"
 - Removed "Hide Dub/Sub"
 - Removed "Season Correction" 
+- Removed "Find Similar" 
 
 Changelog 0.3.8 [20230130]:
 - Added animix search fallback
